@@ -9,21 +9,23 @@ dependencies {
         api(files(Jvm.current().toolsJar))
     }
     api("com.google.googlejavaformat", "google-java-format", googleFormatterVersion)
-    api("io.art.java:launcher")
-    api("io.art.java:core")
-    api("io.art.java:configurator")
-    api("io.art.java:server")
-    api("io.art.java:communicator")
-    api("io.art.java:value")
-    api("io.art.java:model")
-    api("io.art.java:rsocket")
-    api("io.art.java:http")
-    api("io.art.java:json")
-    api("io.art.java:message-pack")
-    api("io.art.java:protobuf")
-    api("io.art.java:scheduler")
-    api("io.art.java:logging")
-    api("io.art.java:rocks-db")
+    api("io.art.java:launcher:main")
+    api("io.art.java:core:main")
+    api("io.art.java:configurator:main")
+    api("io.art.java:server:main")
+    api("io.art.java:communicator:main")
+    api("io.art.java:value:main")
+    api("io.art.java:model:main")
+    api("io.art.java:rsocket:main")
+    api("io.art.java:http:main")
+    api("io.art.java:json:main")
+    api("io.art.java:message-pack:main")
+    api("io.art.java:protobuf:main")
+    api("io.art.java:scheduler:main")
+    api("io.art.java:logging:main")
+    api("io.art.java:rocks-db:main")
+    api("io.art.java:storage:main")
+    api("io.art.java:tarantool:main")
     compileOnly("org.projectlombok", "lombok", lombokVersion)
     annotationProcessor("org.projectlombok", "lombok", lombokVersion)
 }
@@ -37,6 +39,7 @@ tasks.withType<JavaCompile> {
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                 "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
         ))
     }
